# pyseis-io

./: README.md  pyproject.toml
docs/: STRUCTURE.md  architecture.md
examples/: visualize_su.py
scripts/: generate_schemas.py  su_segy_roundtrip.py
src/pyseis_io/: base.py  internal.py  models.py  schema.py  utils.py
src/pyseis_io/core/: dataset.py  format_parser.py  layout.py  reader.py  schema.py  writer.py
src/pyseis_io/gpkg/: __init__.py  writer.py
src/pyseis_io/javaseis/: javaseis.py  js_models.py
src/pyseis_io/legacy/: __init__.py
src/pyseis_io/legacy/segd_construct/: segd.py
src/pyseis_io/legacy/segd_yaml/: __init__.py  filemap.py  reader.py  spec_loader.py  types.py  writer.py
src/pyseis_io/legacy/segd_yaml/defs/: segd21.yml  smartsolo10.yml
src/pyseis_io/segd/: __init__.py  segd.py
src/pyseis_io/segd/formats/: __init__.py  segd21.py  smartsolo10.py
src/pyseis_io/segy/: __init__.py  exporter.py  header_mapping.yaml  importer.py  segy.py  segy_format.yaml
src/pyseis_io/seisdata/: seisdata.py  seisdata_schema.yaml
src/pyseis_io/su/: __init__.py  exporter.py  header_mapping.yaml  importer.py  mapping.yaml  models.py  reader.py  su.yaml  su_format.yaml  writer.py
src/pyseis_io/templates/schemas/: instrument_v1.0.yaml  job_v1.0.yaml  layout_v1.0.yaml  properties_v1.0.yaml  receiver_v1.0.yaml  signature_v1.0.yaml  source_v1.0.yaml  survey_v1.0.yaml  trace_data_v1.0.yaml  trace_header_v1.0.yaml
src/pyseis_io/visualization/: __init__.py  viewer.py
tests/: conftest.py  test_gis_export.py  test_integration_segy.py  test_segd.py  test_segd_yaml.py
tests/core/: test_internal_format.py  test_normalization.py
tests/disabled/: conftest.py  test_core_io.py  test_core_models.py  test_gis_export.py  test_integration_segd.py  test_segy.py  test_su.py
tests/segy/: test_segy_rw.py
tests/su/: test_su_rw.py
tests/visualization/: test_viewer.py
