[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyseis-io"
version = "0.1.0"
description = "I/O components for PySeis"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: AGPL v3.0",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "dask",
    "pyarrow",
    "pyyaml",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

